# pandas_practice

./: Series.ipynb  indexing_filtering.ipynb  pandas_intro.ipynb  pd_df.csv  pyproject.toml
