[tool.poetry]
name = "pandas_practice"
version = "0.1.0"
description = ""
authors = ["AntonShih <anton.shih7@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
